added to about file

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
               </li>
             </ul>
             <form class="d-flex" role="">
-              <input class="form-control me-2" type=""  aria-label="">
+              <!-- <input class="form-control me-2" type=""  aria-label=""> -->
               <button class="btn btn-outline-success" type="submit">sign in</button>
               <button class="btn btn-outline-success" type="submit">log out</button>
             </form>
