--- a/services.html
+++ b/services.html
@@ -27,9 +27,98 @@
                                 <a class="nav-link listy" href="#">Services</a>
                             </li>
                         </ul>
+                        <form class="d-flex login1" role="search" style="margin-right: 5px;">
+                            <!--Log in Button trigger modal -->
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                Log in
+                            </button>
+                            
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h1 class="modal-title fs-5" id="exampleModalLabel">Welcome back</h1>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <form>
+                                                <div class="mb-3">
+                                                  <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                                                </div>
+                                                <div class="mb-3">
+                                                  <label for="exampleInputPassword1" class="form-label">Password</label>
+                                                  <input type="password" class="form-control" id="exampleInputPassword1">
+                                                </div>
+                                                <div class="mb-3 form-check">
+                                                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                                                </div>
+                                                <button type="submit" class="btn btn-primary">Submit</button>
+                                              </form>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary">Log in</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
                         <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
+                            <!-- Sign up Button trigger modal -->
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampledodal">
+                                Sign up
+                            </button>
+                            
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampledodal" tabindex="-1" aria-labelledby="exampledodalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h1 class="modal-title fs-5" id="exampleModalLabel">New here?Signup</h1>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <form>
+                                                <div class="mb-3">
+                                                    <label for="exampleInputtext" class="form-label">Username</label>
+                                                    <input type="text" class="form-control" id="exampleInputtext">
+                                                </div>
+                                                <div class="mb-3">
+                                                  <label for="exampleInutEmail1" class="form-label">Email address</label>
+                                                  <input type="email" class="form-control" id="exampleInutEmail1" aria-describedby="emaiHelp">
+                                                  <div id="emaiHelp" class="form-text">We'll never share your email with anyone else.</div>
+                                                </div>
+                                                <div class="mb-3">
+                                                  <label for="exampleInputPassword1" class="form-label">Password</label>
+                                                  <input type="password" class="form-control" id="exampleInutPassword2">
+                                                  <div class="col-auto">
+                                                    <span id="passwordHelpInline" class="form-text">
+                                                      Must be 8-20 characters long.
+                                                    </span>
+                                                  </div>
+                                                </div>
+                                                <div class="mb-3">
+                                                    <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
+                                                    <input type="password" class="form-control" id="exampleInutPassword2">
+                                                  </div>
+                                                <div class="mb-3 form-check">
+                                                  <input type="checkbox" class="form-check-input" id="exampleCheck2">
+                                                  <label class="form-check-label" for="exampleCheck2">Check me out</label>
+                                                </div>
+                                                <button type="submit" class="btn btn-primary">Submit</button>
+                                              </form>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary">Sign up</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </form>
                     </div>
                 </div>
