--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
               <!-- <button class="btn btn-outline-success" type="submit">sign up</button> -->
 
               <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                     Log In
                 </button>
                 
@@ -119,7 +119,7 @@
                         </div>
                         <div class="modal-footer">
                         <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
-                        <button type="button" class="btn btn-primary">Log in</button>
+                        <button type="button" class="btn btn-secondary">Log in</button>
                         </div>
                     </div>
                     </div>
